@@ -1,10 +1,3 @@
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
-1.4934844860463612E9 1.4934844860463612E9 
+2.4067569447957723E-6 2.4067569447957723E-6 
+2.4067569447957723E-6 2.4067569447957723E-6 
+2.4067569447957723E-6 2.4067569447957723E-6 
